fixed line on index page to align

--- a/style.css
+++ b/style.css
@@ -111,7 +111,7 @@ img {
 }
 
 .qc-line {
-  padding-left: 0;
+  padding: 0;
 }
 
 .launch-link-purp {
